--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -74,7 +74,7 @@
            android:layout_height="wrap_content" />
         <TextView
            android:layout_width="wrap_content"
-           android:text="微信公众号：yzamt88"
+           android:text="微信公众号：yzatm88"
            android:textColor="@color/black"
             android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
