--- a/app/src/main/res/layout/activity_phone_bind.xml
+++ b/app/src/main/res/layout/activity_phone_bind.xml
@@ -49,7 +49,7 @@
         <TextView
             android:id="@+id/tv_send"
             android:layout_width="90dp"
-            android:background="@drawable/round_red_bg"
+            android:background="@drawable/round_gray_bg"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
