--- a/app/src/main/res/layout/activtity_yaoqingshares.xml
+++ b/app/src/main/res/layout/activtity_yaoqingshares.xml
@@ -49,12 +49,16 @@
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
+           android:background="@drawable/round_white_bg"
            android:orientation="horizontal"
-
-           android:layout_height="50dp">
+           android:layout_height="40dp">
            <RelativeLayout
                android:id="@+id/rtl_photo"
                android:layout_width="match_parent"
+               android:background="@color/white"
+               android:layout_marginLeft="0.2dp"
+               android:layout_marginTop="0.2dp"
+               android:layout_marginBottom="0.2dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <TextView
@@ -69,30 +73,37 @@
            <RelativeLayout
                android:id="@+id/rtl_customer"
                android:layout_width="match_parent"
+               android:background="@color/red"
+               android:layout_marginBottom="0.2dp"
+               android:layout_marginTop="0.2dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
-               <TextView
-                   android:id="@+id/tv_customer"
-                   android:layout_width="wrap_content"
-                   android:text="定制版"
-                   android:layout_centerInParent="true"
-                   android:textSize="17sp"
-                   android:textColor="@drawable/black2gray_seleclor"
-                   android:layout_height="wrap_content" />
+                   <TextView
+                       android:id="@+id/tv_customer"
+                       android:layout_width="wrap_content"
+                       android:text="定制版"
+                       android:layout_centerInParent="true"
+                       android:textSize="17sp"
+                       android:textColor="@color/white"
+                       android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rtl_show_order"
                android:layout_width="match_parent"
+               android:background="@color/red"
+               android:layout_marginRight="0.2dp"
+               android:layout_marginBottom="0.2dp"
+               android:layout_marginTop="0.2dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
-               <TextView
-                   android:id="@+id/tv_show_order"
-                   android:layout_width="wrap_content"
-                   android:text="晒单版"
-                   android:layout_centerInParent="true"
-                   android:textSize="17sp"
-                   android:textColor="@drawable/black2gray_seleclor"
-                   android:layout_height="wrap_content" />
+                   <TextView
+                       android:id="@+id/tv_show_order"
+                       android:layout_width="wrap_content"
+                       android:text="晒单版"
+                       android:layout_centerInParent="true"
+                       android:textSize="17sp"
+                       android:textColor="@color/white"
+                       android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
        <FrameLayout
