--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -298,8 +298,9 @@
         </LinearLayout>
         <View
             android:layout_width="match_parent"
+            android:visibility="gone"
             android:background="@color/gray"
-            android:layout_height="2dp"></View>
+            android:layout_height="1dp"></View>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_marginTop="5dp"
