--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
-            android:text="每日首次分享即可获得0.3元的奖励且可以马上提现，在您分享的同时，您的好友通过您的邀请码链接下载易钻ATM完成任务您还可以得到相应的抽成哦！"
+            android:text="新用户首次分享即可获得0.5元的奖励且可以马上提现，在您分享的同时，您的好友通过您的邀请码链接下载易钻ATM完成任务您还可以得到相应的抽成哦！"
             android:textSize="16sp"
             android:layout_height="wrap_content" />
     </RelativeLayout>
